--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="welcome">Welcome to FindMe</string>
 
-    <string name="buttonGo">Go</string>
+    <string name="buttonGo">GO</string>
 
     <string name="findMyFriendButtonText">I want to find my friend</string>
     <string name="findMyFriendDescription">Enter the code we sent to your friend</string>
@@ -13,10 +13,12 @@
     <string name="friendFindMeDescription">Send this code to your friend</string>
     <string name="friendFindMePlaceholder">ABC1234</string>
 
-    <string name="meetHalfwayButtonText">I want to Meet halfway</string>
+    <string name="meetHalfwayButtonText">I want to meet halfway</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_find__my__friend">Find My Friend</string>
+    <string name="title_activity_find__my__friend">Find You</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_friend__find__me">Friend Find Me</string>
+    <string name="title_activity_friend__find__me">Find Me</string>
+    <string name="title_activity_find__me__map">FindMe</string>
+    <string name="title_activity_generate__or__receive">Meet Halfway</string>
 </resources>
