--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="friendFindMePlaceholder">ABC1234</string>
 
     <string name="meetHalfwayButtonText">I want to meet halfway</string>
+    <string name="meetHalfwayDescription">Are you sharing or receiving a code?</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_find__my__friend">Find You</string>
 
